<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/editableCategoryViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:text="@string/label_for_editable_widget"
        android:textColor="@color/nav_text"
        android:textSize="12sp"
        android:textStyle="italic"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp">

            <TextView
                android:id="@+id/editableCategoryViewText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/general_title"
                android:textSize="16sp"
                android:visibility="visible" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/categoryChooserWrapper"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="0dp"
                android:visibility="gone"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:endIconMode="dropdown_menu"
                app:endIconTint="@color/nav_text">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/categoryChooser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/choose_or_type_new_category"
                    android:textColor="@color/nav_text" />

            </com.google.android.material.textfield.TextInputLayout>

        </FrameLayout>

        <ImageButton
            android:id="@+id/categoryEditButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/generic_editable_text_view_edit_button"
            android:padding="2dp"
            android:src="@drawable/ic_edit"
            app:tint="@color/pastel_blue" />

        <ImageButton
            android:id="@+id/categoryCancelButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/generic_editable_text_view_cancel_button"
            android:padding="2dp"
            android:src="@drawable/ic_close"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>