<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Optional Label above the editable row -->
    <TextView
        android:id="@+id/editableTextViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_for_editable_widget"
        android:textSize="12sp"
        android:textColor="@color/grey"
        android:paddingTop="6dp"
        android:visibility="visible"
        android:textStyle="italic" />

    <!-- Row with TextView/EditText + buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

            <TextView
                android:id="@+id/editableTextViewText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/general_title"
                android:textSize="18sp"
                android:padding="0dp"
                android:textStyle="bold" />

        <EditText
            android:id="@+id/editableTextViewEditView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="name"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:visibility="gone"
            tools:ignore="LabelFor" />

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:padding="2dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/generic_editable_text_view_edit_button"
            android:src="@drawable/ic_edit" />

        <ImageButton
            android:id="@+id/cancelButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:padding="2dp"
            android:layout_marginStart="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/generic_editable_text_view_cancel_button"
            android:src="@drawable/ic_close"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>