<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:layout_marginVertical="6dp"
    app:strokeColor="@color/pastel_blue"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="8dp"
    app:cardElevation="1dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="8dp"
    android:paddingHorizontal="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/topRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/bookmarkTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/placeholder_for_all_bookmark_title"
            android:padding="5dp"
            android:textColor="@color/dark_text"
            android:textSize="16sp" />


        <ImageButton
            android:id="@+id/editBookmark"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/button_to_delete_bookmark"
            android:padding="12dp"
            android:src="@drawable/ic_edit"
            app:tint="@color/icon_tint"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />


        <ImageButton
            android:id="@+id/deleteBookmark"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/button_to_edit_bookmark"
            android:padding="12dp"
            android:src="@drawable/ic_bookmark_closed"
            app:tint="@color/icon_tint"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topRow">

        <TextView
            android:id="@+id/bookmarkBookTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_weight="1"
            android:text="@string/placeholder_list_item_bookmark_all_title"
            android:padding="8dp"
            android:maxLines="1"
            android:textColor="@color/dark_text"
            android:textSize="14sp" />
        <ImageView
            android:id="@+id/viewBookmarkImage"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/bookmark_id_or_null_if_not_bookmarked"
            android:src="@drawable/ic_eye"
            android:layout_marginStart="6dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:tint="@color/pastel_blue" />

        <TextView
            android:id="@+id/bookmarkPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginEnd="24dp"
            android:text="@string/placeholder_for_bookmark_page"
            android:layout_marginStart="8dp"
            android:textColor="@color/dark_text"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>