<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:layout_marginVertical="6dp"
    app:cardCornerRadius="8dp"
    android:background="@color/white"
    app:cardElevation="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:background="@color/white"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/tocText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/table_of_contents_text"
            android:textSize="16sp"
            android:textColor="@color/almost_black"
            app:layout_constraintBottom_toTopOf="@+id/bookName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/hasBookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/bookmark_id_or_null_if_not_bookmarked"
            android:src="@drawable/ic_bookmark_open"
            app:layout_constraintBottom_toBottomOf="@+id/bookName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bookName"
            app:tint="@color/almost_black" />

        <TextView
            android:id="@+id/bookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:ellipsize="end"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/name_of_the_book"
            android:textColor="@color/almost_black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/hierarchy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/hierarchy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:ellipsize="end"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/indication_of_toc_item_hierarchy"
            android:textSize="16sp"
            android:textColor="@color/almost_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
