<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tocRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tocToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        android:background="@color/pastel_blue"
        app:title="Table of Contents" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tocRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:clipToPadding="false" />

    <LinearLayout
        android:id="@+id/controlBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F5F5F5"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/btnToggle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/toggle_toc_list_expanded"
            android:src="@drawable/ic_chevron_right" />

        <EditText
            android:id="@+id/searchField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:digits="abcdefghijklmnopqrstuvwxyz0123456789"
            android:hint="@string/search_toc"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp" />

        <ImageButton
            android:id="@+id/btnClear"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/clear_button_for_toc"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>